set min-height in cursor inspector so that it has a consistent height to prevent jumpiness

--- a/src/hazelweb/www/style.css
+++ b/src/hazelweb/www/style.css
@@ -324,7 +324,7 @@ html, body {
 .typebar, .infobar {
   font-size: 125%;
   padding: 5px;
-  min-height: 35px;
+  min-height: 38px;
   display: flex;
   align-items: center;
 }
@@ -333,6 +333,7 @@ html, body {
   font-size: 12pt;
   display: flex;
   align-items: center;
+  min-height: 38px;
 }
 
 .cursor-OK .typebar, .cursor-OK .infobar {
@@ -540,7 +541,7 @@ html, body {
 }
 
 .path-area-parent {
-  min-height: 35px;
+  min-height: 38px;
   display: flex;
   align-items: center;
   padding-left: 5px;
